Java 17, Spring 2.6.2, TestNG 7.5, Selenium 4.1.1, WebdriverManager 5.0.3 upgrades.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ screenshot.path=/Users/onur/Desktop/temp
 app.locale=en
 logging.level.root=INFO
 logging.file.name=${screenshot.path}/test-execution.log
+spring.jpa.defer-datasource-initialization=true
+
