--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.0.RELEASE</version>
+		<version>2.6.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.udemy.spring</groupId>
@@ -15,10 +15,10 @@
 	<description>spring selenium framework</description>
 
 	<properties>
-		<java.version>11</java.version>
-		<selenium.version>3.141.59</selenium.version>
-		<webdrivermanager.version>3.8.1</webdrivermanager.version>
-		<testng.version>7.1.0</testng.version>
+		<java.version>17</java.version>
+		<selenium.version>4.1.1</selenium.version>
+		<webdrivermanager.version>5.0.3</webdrivermanager.version>
+		<testng.version>7.5</testng.version>
 	</properties>
 
 	<dependencies>
